cmake_minimum_required(VERSION 2.8)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/include)

# random_messages
add_executable(random_messages random_messages.cpp)
target_link_libraries(random_messages derecho)

# simple_replicated_objects
add_executable(simple_replicated_objects simple_replicated_objects.cpp)
target_link_libraries(simple_replicated_objects derecho)

# overlapping_replicated_objects
add_executable(overlapping_replicated_objects overlapping_replicated_objects.cpp)
target_link_libraries(overlapping_replicated_objects derecho)
